# GNN-Traffic-predictor

./: .gitignore  CMakeLists.txt  README.md  config.py  data_utils.py  dataset.py  evaluate.py  metrics.py  model.py  path_finder.py  pipeline_utils.py  reporting.py  requirements.txt  train.py  visualization.py
Data/: requirements.txt  visualize_graph.py
Data/graph/: nodes.geojson
Data/processed_gnn_dataset/: Y_test.npy
gcn_project/data/processed_gnn_dataset/: Y_train.npy  Y_val.npy  edge_index.npy  graph_structure.json
gcn_project/models/: eval_model.py  gcn_model.py  gcn_traffic_model.pth
gnn_dataset/: README_EDGE_GCN.md  adjacency_matrix.npz  dataset_summary.json  edge_gcn_best_model.pt  edge_gcn_history.json  edge_gcn_model_ts.pt  edge_gcn_scalers.json  edge_index.npy  node_features.npy  nodes.geojson  pathfinder.py  positions.npy  red.net.xml  red.osm.xml  split_summary.json  train_edge_gcn.py  train_index.csv  val_index.csv
gnn_dataset/reports/: edge_gcn_metrics.json
include/: Graph.hpp
src/: generate_graph.py  main.cpp
